--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "canvas-confetti": "^1.9.2",
+    "microbrand": "file:..",
     "myecommerceapp": "file:..",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
